added version in settings

--- a/gui/config.ui
+++ b/gui/config.ui
@@ -256,6 +256,22 @@
     </item>
    </layout>
   </widget>
+  <widget class="QLabel" name="dmVersion">
+   <property name="geometry">
+    <rect>
+     <x>120</x>
+     <y>280</y>
+     <width>111</width>
+     <height>16</height>
+    </rect>
+   </property>
+   <property name="styleSheet">
+    <string notr="true">color: rgb(238, 238, 238);</string>
+   </property>
+   <property name="text">
+    <string/>
+   </property>
+  </widget>
  </widget>
  <resources/>
  <connections/>
